# src/dto/authentication.dto.ts
@@ -1,0 +1,10 @@
+export interface AuthenticationInputDTO {
+    grant_type: string;
+    username: string;
+    password: string;
+  }
+  
+  export interface AuthenticationOutputDTO {
+    message: string;
+    token?: string;
+  }
