# src/dto/user.dto.ts
@@ -1,0 +1,13 @@
+export interface UserInputDTO {
+    username: string;
+    password: string;
+  }
+  export interface UserInputPatchDTO {
+    username?: string;
+    password?: string;
+  }
+  export interface UserOutputDTO {
+    id: number;
+    username: string;
+    password: string;
+  }
